operator/pkg/gateway-api/testdata/gateway/httproute-circuit-breaker/input/httproute-circuit-breaker.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-conformance-infra-test
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: infra-backend-v1
  namespace: gateway-conformance-infra
  annotations:
    cilium.io/circuit-breaker: "test-circuit-breaker"
spec:
  selector:
    app: infra-backend-v1
  ports:
    - name: first-port
      protocol: TCP
      port: 8080
      targetPort: 3000
---
apiVersion: cilium.io/v2
kind: CiliumEnvoyCircuitBreaker
metadata:
  name: test-circuit-breaker
  namespace: gateway-conformance-infra
spec:
  thresholds:
    - priority: DEFAULT
      maxConnections: 1000
      maxPendingRequests: 2000
      maxRequests: 3000
      maxRetries: 100
    - priority: HIGH
      maxConnections: 5000
      maxPendingRequests: 10000
      maxRequests: 15000
      maxRetries: 500
